[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsutilbox"
version = "0.1.1"
description = "Lightweight utilities for data science workflows"
authors = [{ name = "Youxi Li" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas" 
]